Fix RunVerifierAgent's inferred rspec/rake commands to route through Bundler
Live re-validation of the previous bundle-install fix (eval harness batch
20260804-144646) surfaced a second, independent instance of the same
underlying gap: run_tests() now correctly installs gems before running
rspec, but RunVerifierAgent.judge() infers its own run command through a
completely different mechanism and picked a bare `rspec spec/...` - never
routed through Bundler, so it failed immediately with "No such file or
directory: 'rspec'" regardless of code correctness.

_resolve_run_command() now prefixes `bundle exec` onto an inferred
rspec/rake command whenever a real Gemfile exists, mirroring the existing
Maven exec:java/exec:exec ground-truth correction already in that function.
3 new regression tests, confirmed failing pre-fix.